# qtathon-2025-round2-zeus_storm

./: README.md
surveillance_panel/: CMakeLists.txt
surveillance_panel/config/: cameras.example.json
surveillance_panel/qml/: AIDetectionOverlay.qml  CameraTile.qml
surveillance_panel/src/: AlertLogModel.cpp  AlertLogModel.h  CameraImageProvider.cpp  CameraImageProvider.h  CameraManager.cpp  CameraManager.h  CameraStream.cpp  CameraStream.h  HttpServer.h  ObjectDetector.cpp  ObjectDetector.h  httpServer.cpp  main.cpp
